<resources>
    <string name="app_name">IdeathonPoc</string>
    <string name="get_image_string">Get Image</string>
    <string name="captured_image">Captured Image</string>
    <string name="check_image">Check Image</string>
    <string name="heading_text">PPE Detection App</string>

    <!--    // onboarding Headings-->
    <string name="heading_one">Welcome to PPE Kit Checker</string>
    <string name="heading_two">Capture Your Image</string>
    <string name="heading_three">Check Your PPE Kit</string>
    <string name="heading_fourth">View Your Results</string>
    <string name="heading_fifth">Required PPE Kit</string>

    <!--    //onboarding Description-->
    <string name="desc_one">Ensure your safety by verifying if you are wearing the necessary Personal Protective Equipment (PPE). Let\'s get started!</string>
    <string name="desc_two">Stand straight and take a full-body picture to check your PPE kit. Make sure the lighting is adequate for a clear image.</string>
    <string name="desc_three">Click on the "Check PPE Kit" button to analyze your image. Our app will detect if you\'re wearing the required PPE.</string>
    <string name="desc_fourth">See the results of the PPE check. Ensure all necessary items are worn for your safety. Stay protected!</string>
    <string name="desc_fifth">👷</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_result">Results</string>
    <string name="bottom_nav_about">About</string>
    <string name="hello_home_fragment">Hello Home fragment</string>
    <string name="hello_result_fragment">Hello Result fragment</string>
    <string name="hello_about_fragment">Hello About fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ppe_kit_scanner">PPE KIT SCANNER</string>

</resources>